--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ background-position: center;
 .btn-primary{
     margin-top: 100px;
     text-align: center;
-    margin-left: 105px;
+    margin-left: 85px;
     background-color: transparent;
     width: 70%;
     height: 90px;
@@ -26,4 +26,19 @@ h1{
 br{
     margin-top: 5px;
     font-size: 10px;
+}
+#timeRemaining{
+    text-align: center;
+    display: block;
+    background-color: #B22222;
+}
+.container{
+    text-align: center;
+    margin-top: 15px;
+}
+.form-check-inline{
+    font-size: 18px;
+}
+.radio-inline{
+    font-size: 18px;
 }
